# journey

./: .cursorrules  Cargo.toml  DATE_FORMAT_OVERRIDE.md  DEFAULT_BEHAVIOR_UPDATE.md  LOCALE_TESTING.md  OPTIONAL_NAME_INIT.md  README.md  TEST_SUMMARY.md  TIME_FORMAT_OVERRIDE.md  journey.example.yaml  test_case_sensitive.yaml  test_custom_path.yaml  test_multiple_journals.sh  test_obsidian.sh  test_obsidian_vault  test_real_journals.sh  test_weekday.yaml  test_weekday_debug.yaml  test_weekday_short.yaml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docs/: CATEGORIES.md  CONFIG_FILE_VALIDATION.md  ENVIRONMENT_VARIABLE_MERGE.md  FILE_PATH_FORMATS.md  LOCALIZATION.md  OBSIDIAN_INTEGRATION.md  PHRASE_EXPANSION.md  README.md  SECTION_BASED_NOTES.md  SINGLE_VAULT_AUTO_SELECTION.md  TABLE_MODE.md  TEMPLATE_FILES.md  TEMPLATE_VARIABLES.md  TEST_ISOLATION_SAFETY.md  TEST_REORGANIZATION.md  TIMESTAMP_FORMAT_CHANGE.md
src/: app.rs  cli.rs  config.rs  config_manager.rs  date_time.rs  errors.rs  lib.rs  main.rs  vault.rs
src/journeyctl/: main.rs  mod.rs
test_obsidian/.obsidian/: app.json
test_obsidian/.obsidian/plugins/journals/: data.json
test_obsidian/.obsidian/plugins/periodic-notes/: data.json
tests/: app_tests.rs  cli_tests.rs  config_manager_tests.rs  config_tests.rs  date_time_tests.rs  default_vault_tests.rs  error_tests.rs  template_variable_tests.rs  test_case_sensitive.yaml  test_custom_path.yaml  test_weekday.yaml  test_weekday_debug.yaml  test_weekday_short.yaml  vault_tests.rs
~/Documents/journey/: 2025-10-24.md
