[package]
name = "journey-cli"
version = "0.9.1"
edition = "2021"

[lib]
name = "journey"
path = "src/lib.rs"

[[bin]]
name = "journey"
path = "src/main.rs"

[[bin]]
name = "journeyctl"
path = "src/journeyctl/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
