[package]
name = "journey-cli"
version = "0.9.11"
edition = "2021"
authors = ["Leif Jantzen <leif@jantzen.no>"]
description = "A CLI-based journal application with automatic timestamping, vault management, and Obsidian integration"
license = "MIT"
repository = "https://github.com/ljantzen/journey"
homepage = "https://github.com/ljantzen/journey"
documentation = "https://github.com/ljantzen/journey/blob/main/README.md"
readme = "README.md"
keywords = ["journal", "cli", "note-taking", "markdown", "obsidian"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    ".cursor/",
    ".cursorrules",
    ".github/",
    "docs/TEST_*.md",
    "target/",
]

[lib]
name = "journey"
path = "src/lib.rs"

[[bin]]
name = "journey"
path = "src/main.rs"

[[bin]]
name = "journeyctl"
path = "src/journeyctl/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
